kubernetes/10_message.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-deployment
  labels:
    app: message
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message
  template:
    metadata:
      labels:
        app: message
    spec:
      containers:
      - name: message
        image: baicham/securedbank-message:s18
        ports:
        - containerPort: 9010
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "300m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: message
spec:
  selector:
    app: message
  ports:
  - port: 9010
    targetPort: 9010
  type: ClusterIP
