kubernetes/3_config-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-deployment
  labels:
    app: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: config-server
        image: baicham/securedbank-config-server:s18
        ports:
        - containerPort: 8071
        resources:
          requests:
            cpu: "200m"
            memory: "400Mi"
          limits:
            cpu: "500m"
            memory: "700Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
spec:
  selector:
    app: config-server
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8071
      targetPort: 8071
