kubernetes/4_eureka-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server-deployment
  labels:
    app: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
      - name: eureka-server
        image: baicham/securedbank-eureka-server:s18
        ports:
        - containerPort: 8070
        resources:
          requests:
            cpu: "200m"
            memory: "400Mi"
          limits:
            cpu: "500m"
            memory: "700Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
spec:
  selector:
    app: eureka-server
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8070
      targetPort: 8070
