kubernetes/8_gateway-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-server-deployment
  labels:
    app: gateway-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-server
  template:
    metadata:
      labels:
        app: gateway-server
    spec:
      containers:
      - name: gateway-server
        image: baicham/securedbank-gateway-server:s15
        ports:
        - containerPort: 8072
        resources:
          requests:
            cpu: "200m"
            memory: "400Mi"
          limits:
            cpu: "500m"
            memory: "700Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-server
spec:
  selector:
    app: gateway-server
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8072
      targetPort: 8072
